shesmu-server/src/test/resources/bad/cycle2.shesmu
Define standard_execution()
  Matches broken();

Define broken()
  Matches standard_execution();
